elixir-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elixir-headless
spec:
  ports:
    - name: epmd
      port: 8000
  selector:
    io.kompose.service: elixir
  clusterIP: None
