elixir-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../doit/docker-compose.yml
    kompose.service.nodeport.port: "30080"
    kompose.service.type: nodeport
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: elixir
  name: elixir
spec:
  ports:
    - name: "4000"
      nodePort: 30080
      port: 4000
      targetPort: 4000
  selector:
    io.kompose.service: elixir
  type: NodePort
status:
  loadBalancer: {}
